--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300..700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
  
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Flamenco:wght@300;400&family=Orbitron:wght@400..900&family=Teko:wght@300..700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    <title>R S Constrution</title>
+    <title>R S Construction</title>
   </head>
   <body>
     <noscript>You Dream it. We Will Build it</noscript>
